Fix minor layout issues

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -14,6 +14,16 @@
     border-bottom: #444 dotted 1px;
 }
 
+/* Showcase */
+#showcase {
+    height: 100%;
+}
+
+#showcase .showcase-content {
+    padding-top: 70px;
+    padding-bottom: 30px;
+}
+
 /* Home Info */
 #home-info {
     height: 475px;
