--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ p {
 }
 
 #home-info .info-content p {
-    padding-bottom: 30px;
+    padding-bottom: 15px;
 }
 
 /* Features */
